--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -10,4 +10,7 @@ on:
 
 jobs:
   ci:
+    name: CI
+    # Only run cron on the silverstripe account
+    if: (github.event_name == 'schedule' && startsWith(github.repository, 'silverstripe/')) || (github.event_name != 'schedule')
     uses: silverstripe/gha-ci/.github/workflows/ci.yml@v1
