--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -11,6 +11,6 @@ on:
 jobs:
   ci:
     name: CI
-    # Only run cron on the silverstripe account
-    if: (github.event_name == 'schedule' && startsWith(github.repository, 'silverstripe/')) || (github.event_name != 'schedule')
+    # Only run cron on the <account> account
+    if: (github.event_name == 'schedule' && github.repository_owner == '<account>') || (github.event_name != 'schedule')
     uses: silverstripe/gha-ci/.github/workflows/ci.yml@v1
