--- a/workflows/keepalive.yml
+++ b/workflows/keepalive.yml
@@ -9,8 +9,8 @@ on:
 jobs:
   keepalive:
     name: Keepalive
-    # Only run cron on the silverstripe account
-    if: (github.event_name == 'schedule' && startsWith(github.repository, 'silverstripe/')) || (github.event_name != 'schedule')
+    # Only run cron on the <account> account
+    if: (github.event_name == 'schedule' && github.repository_owner == '<account>') || (github.event_name != 'schedule')
     runs-on: ubuntu-latest
     steps:
       - name: Keepalive
